# nukenpm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  plan.md
.github/: nukenpm-formula.rb.tmpl
.github/workflows/: build.yml  release.yml  web.yml
cli/: Cargo.toml
cli/src/: app.rs  deleter.rs  fs_utils.rs  main.rs  scanner.rs  ui.rs
src/: app.rs  fs_utils.rs  main.rs  scanner.rs  ui.rs
web/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
web/public/: _headers  robots.txt
web/src/: env.d.ts
web/src/components/: InstallCommand.astro  Terminal.astro
web/src/config/: site.ts
web/src/layouts/: BaseLayout.astro
web/src/pages/: 404.astro  index.astro
web/src/scripts/: copy.ts  nm-term.ts
