[package]
name = "nukenpm"
version = "0.2.0"
edition = "2024"
description = "Interactive TUI to find and clean node_modules directories"
license = "MIT"
repository = "https://github.com/preschian/nukenpm"
homepage = "https://github.com/preschian/nukenpm"
readme = "../README.md"
keywords = ["node_modules", "cli", "tui", "disk", "cleanup"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
